<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/blue_shade_1"
    android:id="@+id/idRLBSheet"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/idTVCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/idIVCourse"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/idTVCourseName"
        android:layout_margin="4dp"
        android:src="@mipmap/ic_launcher"
        android:padding="4dp"
        android:layout_centerVertical="true"/>


    <TextView
        android:id="@+id/idTVDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/white"
        android:padding="3dp"
        android:layout_margin="4dp"
        android:layout_below="@id/idTVCourseName"
        android:layout_toRightOf="@+id/idIVCourse" />


    <TextView
        android:id="@+id/idTVSuitedFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suited_for"
        android:textColor="@color/white"
        android:padding="3dp"
        android:layout_margin="4dp"
        android:layout_below="@id/idTVDescription"
        android:layout_toRightOf="@+id/idIVCourse" />


    <TextView
        android:id="@+id/idTVPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/white"
        android:padding="3dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="4dp"
        android:layout_below="@id/idTVSuitedFor"
        android:layout_toRightOf="@+id/idIVCourse" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@+id/idIVCourse">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/edit_course"
            android:textColor="@color/white"
            android:id="@+id/idBtnEdit"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/view_details"
            android:textColor="@color/white"
            android:id="@+id/idBtnViewDetails"
            android:textAllCaps="false"/>


    </LinearLayout>

</RelativeLayout>