<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_shade_1"
    tools:context=".RegistrationActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_user_name"
        android:padding="5dp"
        style="@style/TextInputLayout"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idEDUserName"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/idTILUserName"
        android:hint="@string/enter_your_password"
        android:padding="5dp"
        style="@style/TextInputLayout"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idEdtPwd"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILCnPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/idTILPassword"
        android:padding="5dp"
        style="@style/TextInputLayout"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idedtCnPwd"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textColorHint="@color/white"
            android:importantForAutofill="no"/>


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/idBtnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTILCnPwd"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button_back"
        android:text="@string/register"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/idTVLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_a_user_login_here"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_below="@+id/idBtnRegister"
        android:textSize="18sp"
        android:layout_marginTop="38dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/idPBLoading"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress_back"/>

</RelativeLayout>















